feat: Ensured no duplicates in the db, added MongoDB implementation